# Helix

./: .env.example  .gitignore  README.md  gitgenix-contributions.txt  index.html  package-lock.json  package.json  start.sh
android/: build.gradle.kts  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/invoke/android/agent/: AgentClient.kt  LocalModelClient.kt
android/app/src/main/kotlin/com/invoke/android/overlay/: InvokeBubble.kt
android/app/src/main/res/drawable/: ic_mic.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: footer-section.tsx  hero-section.tsx  idea-section.tsx  section-wrapper.tsx
frontend/styles/: globals.css
scripts/: whisper_server.py
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: coordinator.rs  lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/agent/: llm_client.rs  mod.rs  tools.rs  types.rs  validation.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/managers/: audio.rs  mod.rs  model.rs  transcription.rs
src/components/: ActionLog.tsx  InvokeButton.tsx  Onboarding.tsx  RecordingOverlay.tsx  Settings.tsx  StatusIndicator.tsx
src/lib/: types.ts
src/stores/: app-store.ts
(+5 files in other folders)
