[package]
name = "helix"
version = "0.1.0"
edition = "2021"

[lib]
name = "helix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.16"
hound = "3.5"
rubato = "0.16"
enigo = "0.6"
async-trait = "0.1"
futures = "0.3"
